--- a/style.css
+++ b/style.css
@@ -1,12 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');*
-{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-}
 
 body
 {
-    background: white;
+    background: black;
+    background-color: black;
+
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    
+    position: absolute;
+
+    top: 0;
+    bottom:0;
+    left:0;
+    right:0;
+
+    display: flex;
+    justify-content: center;
+
+    min-height: 400px;
+}
+
+.container 
+{
+    width: 100%;
+    max-width: 500px;
+
+    text-align: center;
+
+    margin:32px;
+
+    background-color:rgba(255, 255, 255, 0.801);
+    border-radius:8px;
+}
+
+.container input
+{
+    margin-top: 5%;
+    border-radius: 6px;
+    height: 20px;
+    width:80%;
+
+    padding:12px;
+
+    outline: none;
+
+    font-size: 16px;
+
+    color: tomato;
+    margin-bottom: auto;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+input[type=number] 
+{
+  -moz-appearance: textfield;
+}
+
+
+
+button 
+{
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+      
+    margin-top:20px;
+    margin-bottom:10px;
+
+    width:200px;
+    padding:12px;
+  
+    color: tomato;
+    background-color:rgb(49, 49, 49);
+    border:800px;
+    border-radius: 6px;
+    border-color: tomato;
+
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover 
+{
+    background-color: rgba(255, 99, 71, 0.527);
 }
