Changed base colors and Added effects to button

--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');*
 
+/* global */
 *
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     outline: none;
-    background-color: ecf0f3;
+    background-color:#171717;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
 }
@@ -17,15 +18,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ecf0f3;
+    background-color: #444444;
 }
 
 .calc
 {
-    box-shadow: 
-        6px 6px 13px #fff,
-        6px 6px 13px rgba(0, 0, 0,.16);
-
     border-radius: 28px;
     padding: 16px;
     display: grid;
@@ -54,13 +51,10 @@ input
     font-size: 40px;
 }
 
+/* button effects */
 button 
 {
-    box-shadow: 
-        6px 6px 13px #fff,
-        6px 6px 13px rgba(0, 0, 0,.16);
-
-    background-color: #ecf0f3;
+    background-color: #DA0037;
     border: none;
     border-radius: 50%;
     height: 50px;
@@ -70,6 +64,17 @@ button
     font-weight: bold;
     font-size: 20px;
 }
+
+button:hover
+{
+    opacity: 0.5;
+}
+
+button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 
 .equal
 {
